--- a/PodsAndServices/service.yml
+++ b/PodsAndServices/service.yml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world
+  name: slackbot
   labels:
-   app: hello-world
+   app: slackbot
 spec:
   selector:
-    app: hello-world
+    app: slackbot
   ports:
-    - port: 80
+    - port: 4000
       protocol: TCP
   type: NodePort
