--- a/eksctl.yml
+++ b/eksctl.yml
@@ -2,15 +2,15 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: jrice-sr-eks-cluster
+  name: jrice-sr-eks
   region: us-east-1
 
 nodeGroups:
   - name: ng-1
-    instanceType: m5.large
+    instanceType: t2.small
     desiredCapacity: 10
     ssh:
       allow: true # will use ~/.ssh/id_rsa.pub as the default ssh key
   - name: ng-2
-    instanceType: m5.xlarge
+    instanceType: t2.micro
     desiredCapacity: 2
